frontend/src/Components/Page/Toolbar/PageToolbarButton.css
.toolbarButton {
  composes: link from '~Components/Link/Link.css';

  padding-top: 4px;
  width: $toolbarButtonWidth;
  text-align: center;

  &:hover {
    color: $toobarButtonHoverColor;
  }

  &.isDisabled {
    color: $disabledColor;
  }
}

.isDisabled {
  color: $disabledColor;
}

.labelContainer {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 24px;
}

.label {
  padding: 0 3px;
  color: $toolbarLabelColor;
  font-size: $extraSmallFontSize;
  line-height: calc($extraSmallFontSize + 1px);
}

